// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Row 正确导出 Row 组件 1`] = `
<div
  className="guree-row"
  style={Object {}}
/>
`;

exports[`Row 测试 Row 组件 align 参数 1`] = `
<div
  className="guree-row guree-row-top"
  style={Object {}}
>
  <div
    className="guree-col guree-col-6"
    style={
      Object {
        "flex": undefined,
      }
    }
  >
    col-6
  </div>
  <div
    className="guree-col guree-col-6"
    style={
      Object {
        "flex": undefined,
      }
    }
  >
    col-6
  </div>
  <div
    className="guree-col guree-col-6"
    style={
      Object {
        "flex": undefined,
      }
    }
  >
    col-6
  </div>
</div>
`;

exports[`Row 测试 Row 组件 align 参数 2`] = `
<div
  className="guree-row guree-row-middle"
  style={Object {}}
>
  <div
    className="guree-col guree-col-6"
    style={
      Object {
        "flex": undefined,
      }
    }
  >
    col-6
  </div>
  <div
    className="guree-col guree-col-6"
    style={
      Object {
        "flex": undefined,
      }
    }
  >
    col-6
  </div>
  <div
    className="guree-col guree-col-6"
    style={
      Object {
        "flex": undefined,
      }
    }
  >
    col-6
  </div>
</div>
`;

exports[`Row 测试 Row 组件 align 参数 3`] = `
<div
  className="guree-row guree-row-bottom"
  style={Object {}}
>
  <div
    className="guree-col guree-col-6"
    style={
      Object {
        "flex": undefined,
      }
    }
  >
    col-6
  </div>
  <div
    className="guree-col guree-col-6"
    style={
      Object {
        "flex": undefined,
      }
    }
  >
    col-6
  </div>
  <div
    className="guree-col guree-col-6"
    style={
      Object {
        "flex": undefined,
      }
    }
  >
    col-6
  </div>
</div>
`;

exports[`Row 测试 Row 组件 gutter 参数 1`] = `
<div
  className="guree-row"
  style={
    Object {
      "marginLeft": -8,
      "marginRight": -8,
    }
  }
>
  <div
    className="guree-col guree-col-6"
    style={
      Object {
        "flex": undefined,
        "paddingLeft": 8,
        "paddingRight": 8,
      }
    }
  >
    col-6
  </div>
  <div
    className="guree-col guree-col-6"
    style={
      Object {
        "flex": undefined,
        "paddingLeft": 8,
        "paddingRight": 8,
      }
    }
  >
    col-6
  </div>
  <div
    className="guree-col guree-col-6"
    style={
      Object {
        "flex": undefined,
        "paddingLeft": 8,
        "paddingRight": 8,
      }
    }
  >
    col-6
  </div>
  <div
    className="guree-col guree-col-6"
    style={
      Object {
        "flex": undefined,
        "paddingLeft": 8,
        "paddingRight": 8,
      }
    }
  >
    col-6
  </div>
</div>
`;

exports[`Row 测试 Row 组件 gutter 参数 2`] = `
<div
  className="guree-row"
  style={
    Object {
      "marginLeft": -16,
      "marginRight": -16,
    }
  }
>
  <div
    className="guree-col guree-col-6"
    style={
      Object {
        "flex": undefined,
        "paddingLeft": 16,
        "paddingRight": 16,
      }
    }
  >
    col-6
  </div>
  <div
    className="guree-col guree-col-6"
    style={
      Object {
        "flex": undefined,
        "paddingLeft": 16,
        "paddingRight": 16,
      }
    }
  >
    col-6
  </div>
  <div
    className="guree-col guree-col-6"
    style={
      Object {
        "flex": undefined,
        "paddingLeft": 16,
        "paddingRight": 16,
      }
    }
  >
    col-6
  </div>
  <div
    className="guree-col guree-col-6"
    style={
      Object {
        "flex": undefined,
        "paddingLeft": 16,
        "paddingRight": 16,
      }
    }
  >
    col-6
  </div>
</div>
`;

exports[`Row 测试 Row 组件 gutter 参数 3`] = `
<div
  className="guree-row"
  style={
    Object {
      "marginBottom": 12,
      "marginLeft": -8,
      "marginRight": -8,
      "marginTop": -12,
    }
  }
>
  <div
    className="guree-col guree-col-6"
    style={
      Object {
        "flex": undefined,
        "paddingBottom": 12,
        "paddingLeft": 8,
        "paddingRight": 8,
        "paddingTop": 12,
      }
    }
  >
    col-6
  </div>
  <div
    className="guree-col guree-col-6"
    style={
      Object {
        "flex": undefined,
        "paddingBottom": 12,
        "paddingLeft": 8,
        "paddingRight": 8,
        "paddingTop": 12,
      }
    }
  >
    col-6
  </div>
  <div
    className="guree-col guree-col-6"
    style={
      Object {
        "flex": undefined,
        "paddingBottom": 12,
        "paddingLeft": 8,
        "paddingRight": 8,
        "paddingTop": 12,
      }
    }
  >
    col-6
  </div>
  <div
    className="guree-col guree-col-6"
    style={
      Object {
        "flex": undefined,
        "paddingBottom": 12,
        "paddingLeft": 8,
        "paddingRight": 8,
        "paddingTop": 12,
      }
    }
  >
    col-6
  </div>
</div>
`;

exports[`Row 测试 Row 组件 gutter 参数 4`] = `
<div
  className="guree-row"
  style={
    Object {
      "marginBottom": 10,
      "marginLeft": -4,
      "marginRight": -4,
      "marginTop": -10,
    }
  }
>
  <div
    className="guree-col guree-col-6"
    style={
      Object {
        "flex": undefined,
        "paddingBottom": 10,
        "paddingLeft": 4,
        "paddingRight": 4,
        "paddingTop": 10,
      }
    }
  >
    col-6
  </div>
  <div
    className="guree-col guree-col-6"
    style={
      Object {
        "flex": undefined,
        "paddingBottom": 10,
        "paddingLeft": 4,
        "paddingRight": 4,
        "paddingTop": 10,
      }
    }
  >
    col-6
  </div>
  <div
    className="guree-col guree-col-6"
    style={
      Object {
        "flex": undefined,
        "paddingBottom": 10,
        "paddingLeft": 4,
        "paddingRight": 4,
        "paddingTop": 10,
      }
    }
  >
    col-6
  </div>
  <div
    className="guree-col guree-col-6"
    style={
      Object {
        "flex": undefined,
        "paddingBottom": 10,
        "paddingLeft": 4,
        "paddingRight": 4,
        "paddingTop": 10,
      }
    }
  >
    col-6
  </div>
</div>
`;

exports[`Row 测试 Row 组件 gutter 参数, gutter 为 undefined 1`] = `
<div
  className="guree-row"
  style={Object {}}
>
  <div
    className="guree-col guree-col-6"
    style={
      Object {
        "flex": undefined,
      }
    }
  >
    col-6
  </div>
  <div
    className="guree-col guree-col-6"
    style={
      Object {
        "flex": undefined,
      }
    }
  >
    col-6
  </div>
  <div
    className="guree-col guree-col-6"
    style={
      Object {
        "flex": undefined,
      }
    }
  >
    col-6
  </div>
  <div
    className="guree-col guree-col-6"
    style={
      Object {
        "flex": undefined,
      }
    }
  >
    col-6
  </div>
</div>
`;

exports[`Row 测试 Row 组件 gutter 参数, window.innerWidth 为 575 1`] = `
<div
  className="guree-row"
  style={
    Object {
      "marginBottom": 7,
      "marginLeft": -1,
      "marginRight": -1,
      "marginTop": -7,
    }
  }
>
  <div
    className="guree-col guree-col-6"
    style={
      Object {
        "flex": undefined,
        "paddingBottom": 7,
        "paddingLeft": 1,
        "paddingRight": 1,
        "paddingTop": 7,
      }
    }
  >
    col-6
  </div>
  <div
    className="guree-col guree-col-6"
    style={
      Object {
        "flex": undefined,
        "paddingBottom": 7,
        "paddingLeft": 1,
        "paddingRight": 1,
        "paddingTop": 7,
      }
    }
  >
    col-6
  </div>
  <div
    className="guree-col guree-col-6"
    style={
      Object {
        "flex": undefined,
        "paddingBottom": 7,
        "paddingLeft": 1,
        "paddingRight": 1,
        "paddingTop": 7,
      }
    }
  >
    col-6
  </div>
  <div
    className="guree-col guree-col-6"
    style={
      Object {
        "flex": undefined,
        "paddingBottom": 7,
        "paddingLeft": 1,
        "paddingRight": 1,
        "paddingTop": 7,
      }
    }
  >
    col-6
  </div>
</div>
`;

exports[`Row 测试 Row 组件 gutter 参数, window.innerWidth 为 576 1`] = `
<div
  className="guree-row"
  style={
    Object {
      "marginBottom": 8,
      "marginLeft": -2,
      "marginRight": -2,
      "marginTop": -8,
    }
  }
>
  <div
    className="guree-col guree-col-6"
    style={
      Object {
        "flex": undefined,
        "paddingBottom": 8,
        "paddingLeft": 2,
        "paddingRight": 2,
        "paddingTop": 8,
      }
    }
  >
    col-6
  </div>
  <div
    className="guree-col guree-col-6"
    style={
      Object {
        "flex": undefined,
        "paddingBottom": 8,
        "paddingLeft": 2,
        "paddingRight": 2,
        "paddingTop": 8,
      }
    }
  >
    col-6
  </div>
  <div
    className="guree-col guree-col-6"
    style={
      Object {
        "flex": undefined,
        "paddingBottom": 8,
        "paddingLeft": 2,
        "paddingRight": 2,
        "paddingTop": 8,
      }
    }
  >
    col-6
  </div>
  <div
    className="guree-col guree-col-6"
    style={
      Object {
        "flex": undefined,
        "paddingBottom": 8,
        "paddingLeft": 2,
        "paddingRight": 2,
        "paddingTop": 8,
      }
    }
  >
    col-6
  </div>
</div>
`;

exports[`Row 测试 Row 组件 gutter 参数, window.innerWidth 为 768 1`] = `
<div
  className="guree-row"
  style={
    Object {
      "marginBottom": 9,
      "marginLeft": -3,
      "marginRight": -3,
      "marginTop": -9,
    }
  }
>
  <div
    className="guree-col guree-col-6"
    style={
      Object {
        "flex": undefined,
        "paddingBottom": 9,
        "paddingLeft": 3,
        "paddingRight": 3,
        "paddingTop": 9,
      }
    }
  >
    col-6
  </div>
  <div
    className="guree-col guree-col-6"
    style={
      Object {
        "flex": undefined,
        "paddingBottom": 9,
        "paddingLeft": 3,
        "paddingRight": 3,
        "paddingTop": 9,
      }
    }
  >
    col-6
  </div>
  <div
    className="guree-col guree-col-6"
    style={
      Object {
        "flex": undefined,
        "paddingBottom": 9,
        "paddingLeft": 3,
        "paddingRight": 3,
        "paddingTop": 9,
      }
    }
  >
    col-6
  </div>
  <div
    className="guree-col guree-col-6"
    style={
      Object {
        "flex": undefined,
        "paddingBottom": 9,
        "paddingLeft": 3,
        "paddingRight": 3,
        "paddingTop": 9,
      }
    }
  >
    col-6
  </div>
</div>
`;

exports[`Row 测试 Row 组件 gutter 参数, window.innerWidth 为 992 1`] = `
<div
  className="guree-row"
  style={
    Object {
      "marginBottom": 10,
      "marginLeft": -4,
      "marginRight": -4,
      "marginTop": -10,
    }
  }
>
  <div
    className="guree-col guree-col-6"
    style={
      Object {
        "flex": undefined,
        "paddingBottom": 10,
        "paddingLeft": 4,
        "paddingRight": 4,
        "paddingTop": 10,
      }
    }
  >
    col-6
  </div>
  <div
    className="guree-col guree-col-6"
    style={
      Object {
        "flex": undefined,
        "paddingBottom": 10,
        "paddingLeft": 4,
        "paddingRight": 4,
        "paddingTop": 10,
      }
    }
  >
    col-6
  </div>
  <div
    className="guree-col guree-col-6"
    style={
      Object {
        "flex": undefined,
        "paddingBottom": 10,
        "paddingLeft": 4,
        "paddingRight": 4,
        "paddingTop": 10,
      }
    }
  >
    col-6
  </div>
  <div
    className="guree-col guree-col-6"
    style={
      Object {
        "flex": undefined,
        "paddingBottom": 10,
        "paddingLeft": 4,
        "paddingRight": 4,
        "paddingTop": 10,
      }
    }
  >
    col-6
  </div>
</div>
`;

exports[`Row 测试 Row 组件 gutter 参数, window.innerWidth 为 1200 1`] = `
<div
  className="guree-row"
  style={
    Object {
      "marginBottom": 11,
      "marginLeft": -5,
      "marginRight": -5,
      "marginTop": -11,
    }
  }
>
  <div
    className="guree-col guree-col-6"
    style={
      Object {
        "flex": undefined,
        "paddingBottom": 11,
        "paddingLeft": 5,
        "paddingRight": 5,
        "paddingTop": 11,
      }
    }
  >
    col-6
  </div>
  <div
    className="guree-col guree-col-6"
    style={
      Object {
        "flex": undefined,
        "paddingBottom": 11,
        "paddingLeft": 5,
        "paddingRight": 5,
        "paddingTop": 11,
      }
    }
  >
    col-6
  </div>
  <div
    className="guree-col guree-col-6"
    style={
      Object {
        "flex": undefined,
        "paddingBottom": 11,
        "paddingLeft": 5,
        "paddingRight": 5,
        "paddingTop": 11,
      }
    }
  >
    col-6
  </div>
  <div
    className="guree-col guree-col-6"
    style={
      Object {
        "flex": undefined,
        "paddingBottom": 11,
        "paddingLeft": 5,
        "paddingRight": 5,
        "paddingTop": 11,
      }
    }
  >
    col-6
  </div>
</div>
`;

exports[`Row 测试 Row 组件 gutter 参数, window.innerWidth 为 1600 1`] = `
<div
  className="guree-row"
  style={
    Object {
      "marginBottom": 12,
      "marginLeft": -6,
      "marginRight": -6,
      "marginTop": -12,
    }
  }
>
  <div
    className="guree-col guree-col-6"
    style={
      Object {
        "flex": undefined,
        "paddingBottom": 12,
        "paddingLeft": 6,
        "paddingRight": 6,
        "paddingTop": 12,
      }
    }
  >
    col-6
  </div>
  <div
    className="guree-col guree-col-6"
    style={
      Object {
        "flex": undefined,
        "paddingBottom": 12,
        "paddingLeft": 6,
        "paddingRight": 6,
        "paddingTop": 12,
      }
    }
  >
    col-6
  </div>
  <div
    className="guree-col guree-col-6"
    style={
      Object {
        "flex": undefined,
        "paddingBottom": 12,
        "paddingLeft": 6,
        "paddingRight": 6,
        "paddingTop": 12,
      }
    }
  >
    col-6
  </div>
  <div
    className="guree-col guree-col-6"
    style={
      Object {
        "flex": undefined,
        "paddingBottom": 12,
        "paddingLeft": 6,
        "paddingRight": 6,
        "paddingTop": 12,
      }
    }
  >
    col-6
  </div>
</div>
`;

exports[`Row 测试 Row 组件 justify 参数 1`] = `
<div
  className="guree-row guree-row-start"
  style={Object {}}
>
  <div
    className="guree-col guree-col-6"
    style={
      Object {
        "flex": undefined,
      }
    }
  >
    col-6
  </div>
  <div
    className="guree-col guree-col-6"
    style={
      Object {
        "flex": undefined,
      }
    }
  >
    col-6
  </div>
  <div
    className="guree-col guree-col-6"
    style={
      Object {
        "flex": undefined,
      }
    }
  >
    col-6
  </div>
</div>
`;

exports[`Row 测试 Row 组件 justify 参数 2`] = `
<div
  className="guree-row guree-row-end"
  style={Object {}}
>
  <div
    className="guree-col guree-col-6"
    style={
      Object {
        "flex": undefined,
      }
    }
  >
    col-6
  </div>
  <div
    className="guree-col guree-col-6"
    style={
      Object {
        "flex": undefined,
      }
    }
  >
    col-6
  </div>
  <div
    className="guree-col guree-col-6"
    style={
      Object {
        "flex": undefined,
      }
    }
  >
    col-6
  </div>
</div>
`;

exports[`Row 测试 Row 组件 justify 参数 3`] = `
<div
  className="guree-row guree-row-center"
  style={Object {}}
>
  <div
    className="guree-col guree-col-6"
    style={
      Object {
        "flex": undefined,
      }
    }
  >
    col-6
  </div>
  <div
    className="guree-col guree-col-6"
    style={
      Object {
        "flex": undefined,
      }
    }
  >
    col-6
  </div>
  <div
    className="guree-col guree-col-6"
    style={
      Object {
        "flex": undefined,
      }
    }
  >
    col-6
  </div>
</div>
`;

exports[`Row 测试 Row 组件 justify 参数 4`] = `
<div
  className="guree-row guree-row-space-around"
  style={Object {}}
>
  <div
    className="guree-col guree-col-6"
    style={
      Object {
        "flex": undefined,
      }
    }
  >
    col-6
  </div>
  <div
    className="guree-col guree-col-6"
    style={
      Object {
        "flex": undefined,
      }
    }
  >
    col-6
  </div>
  <div
    className="guree-col guree-col-6"
    style={
      Object {
        "flex": undefined,
      }
    }
  >
    col-6
  </div>
</div>
`;

exports[`Row 测试 Row 组件 justify 参数 5`] = `
<div
  className="guree-row guree-row-space-between"
  style={Object {}}
>
  <div
    className="guree-col guree-col-6"
    style={
      Object {
        "flex": undefined,
      }
    }
  >
    col-6
  </div>
  <div
    className="guree-col guree-col-6"
    style={
      Object {
        "flex": undefined,
      }
    }
  >
    col-6
  </div>
  <div
    className="guree-col guree-col-6"
    style={
      Object {
        "flex": undefined,
      }
    }
  >
    col-6
  </div>
</div>
`;
